--- a/index.html
+++ b/index.html
@@ -321,39 +321,39 @@ footer{
         <div class="work-info"><h3>練習</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0004.JPG">
+        <img src="0004.jpg">
         <div class="work-info"><h3>掌控</h3><p>2025</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0005.PNG">
+        <img src="0005.png">
         <div class="work-info"><h3>練習 女高中生</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0006.PNG">
+        <img src="0006.png">
         <div class="work-info"><h3>同病相憐</h3><p>2024</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0007.PNG">
+        <img src="0007.png">
         <div class="work-info"><h3>卡芙卡</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0008.PNG">
+        <img src="0008.png">
         <div class="work-info"><h3>練習2</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0009.PNG">
+        <img src="0009.png">
         <div class="work-info"><h3>沉溺</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0010.PNG">
+        <img src="0010.png">
         <div class="work-info"><h3>場景練習1</h3><p>2026</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0011.PNG">
+        <img src="0011.png">
         <div class="work-info"><h3>場景練習2</h3><p>2026</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0012.PNG">
+        <img src="0012.png">
         <div class="work-info"><h3>謎之嶼</h3><p>2025</p></div>
     </div>
 </div>
@@ -397,3 +397,4 @@ function openImg(el){
 
 </body>
 </html>
+
