--- a/index.html
+++ b/index.html
@@ -317,7 +317,7 @@ footer{
         <div class="work-info"><h3>廁所</h3><p>2025</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
-        <img src="0003.PNG">
+        <img src="0003.png">
         <div class="work-info"><h3>練習</h3><p>2023</p></div>
     </div>
     <div class="work-item" onclick="openImg(this)">
@@ -397,4 +397,5 @@ function openImg(el){
 
 </body>
 </html>
+
 
